--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "type.js": "0.0.1",
+    "typed.js": "^2.0.11",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
